update MM Domain, LP + Update Generator but there is a bug for LargeRoom