@@ -2,139 +2,61 @@ package generators;
 
 import java.util.ArrayList;
 import java.util.Deque;
-import java.util.EnumMap;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Random;
 import java.util.Set;
-import java.util.Stack;
 import java.util.stream.Collectors;
 
 import generator.Directions;
 import generator.Dungeon;
 import generator.DungeonMode;
-import generator.LargeRoomType;
+import generator.ETaskType;
 import generator.Room;
 import generator.RoomAccess;
 import generator.RoomType;
-import generator.TaskType;
 import generator.impl.DungeonImpl;
 import generator.impl.QuestionImpl;
 import generator.impl.RoomAccessImpl;
 import generator.impl.RoomImpl;
+import managers.EducationElementsManager;
+import managers.GridManager;
 import models.ModelAccess;
 import structures.Coordinate;
-import structures.DataAccess;
-import structures.GridPositions;
 
 public class DungeonGenerator {
 	private Dungeon generatedDungeon; 
 	private ModelAccess modelAccess;
 	
-	/** Structure to save occupied Coordinates on a fake grid */
-	private Map<Coordinate, Room> occupiedCoordinates;
+	
 	/** Attribute to generate random elements */
 	private Random random;
 	
-	/** Data structure saving for each direction, its opposite directions (e.g., SOUTH => NORTH, NORTH_EAST, NORTH_WEST) */
-	private EnumMap<Directions, Set<Directions>> oppositeDirections;
-	/** Data structure enumerating simple directions (SOUTH, NORTH, EAST, WEST) */
-	private Set<Directions> simpleDirections;
-	/** Data structure enumerating complex directions (SOUTH_EAST, SOUTH_WEST, NORTH_EAST, NORTH_WEST, EAST_SOUTH, etc.) */
-	private Set<Directions> complexDirections;
-	private List<TaskType> taskTypes;
+	private GridManager gridManager;
+	private EducationElementsManager eeManager; 
 	
-	public DungeonGenerator(ModelAccess modelAccess) {
+	private DungeonGenerator(ModelAccess modelAccess) {
 		this.modelAccess = modelAccess;
 		generatedDungeon = new DungeonImpl();
 		random = new Random();
-		occupiedCoordinates = new HashMap<>();
-		oppositeDirections = DataAccess.setOppositeDirections();
-		complexDirections = DataAccess.setComplexeDirections();
-		simpleDirections = DataAccess.setSimpleDirections();
+		gridManager = new GridManager(modelAccess);	
 	}
 	
-	public DungeonGenerator(ModelAccess modelAccess, List<TaskType> taskTypes_) {
-		this.modelAccess = modelAccess;
-		generatedDungeon = new DungeonImpl();
-		random = new Random();
-		occupiedCoordinates = new HashMap<>();
-		oppositeDirections = DataAccess.setOppositeDirections();
-		complexDirections = DataAccess.setComplexeDirections();
-		simpleDirections = DataAccess.setSimpleDirections();
-		taskTypes = taskTypes_;
+	public DungeonGenerator(ModelAccess modelAccess, EducationElementsManager eeManager) {
+		this(modelAccess); 		
+		this.eeManager = eeManager;
 	}
 	
-	public List<TaskType> getTaskTypes() {
-		return taskTypes;
-	}
-
-	public void setTaskTypes(List<TaskType> taskTypes) {
-		this.taskTypes = taskTypes;
-	}
-
 	public Dungeon generateDungeon() {
 		if(modelAccess.context.getGamecontext().getMode().equals(DungeonMode.LINEAR)) {
-			//generateLinearDungeon();
 			generateLinearDungeon();
 		}else {
 		}
 		return generatedDungeon;
 	}
 
-	@Deprecated
-	private void generateLinearDungeon2() {
-		Stack<Map.Entry<Room, Directions>> dungeonRooms = new Stack<>();
-		Stack<Map<Directions, Set<Directions>>> roomAllowedDirections = new Stack<>();
-		int numberofrooms = modelAccess.context.getGamecontext().getNumberOfRooms();
-		
-		Room originRoom = createEntryRoom();
-		dungeonRooms.add(Map.entry(originRoom, originRoom.getRoomaccess().get(0).getDirection()));
-	
-		boolean backtrack = false;
-		Coordinate nextPosition = null;//, position;
-		while(dungeonRooms.size() < numberofrooms + 1) {
-			
-			nextPosition = getNextCoord(dungeonRooms.peek().getKey(), dungeonRooms.peek().getValue());
-			if(!backtrack) {
-				roomAllowedDirections.add(getAllowedDirections(nextPosition, oppositeDirections.get(dungeonRooms.peek().getValue()))); 
-			}
-			if(roomAllowedDirections.peek().isEmpty()) {
-				System.out.println("Avec backtrack");
-				backtrack = true;
-				roomAllowedDirections.pop();
-				Entry<Room, Directions> r = dungeonRooms.pop();
-				removeAllOccupied(r.getKey());
-				for (Directions dir : new ArrayList<>(roomAllowedDirections.peek().keySet())) {
-					roomAllowedDirections.peek().get(dir).remove(r.getValue());
-					if(roomAllowedDirections.peek().get(dir).isEmpty()) {
-						roomAllowedDirections.peek().remove(dir);
-					}
-				}
-			}else {
-				backtrack = false;
-				Directions entry = roomAllowedDirections.peek().keySet().stream().collect(Collectors.toList()).get(random.nextInt(roomAllowedDirections.peek().keySet().size()));
-				Directions exit = Directions.NONE;
-				if(dungeonRooms.size() != numberofrooms) {
-					exit = roomAllowedDirections.peek().get(entry).stream().collect(Collectors.toList()).get(random.nextInt(roomAllowedDirections.peek().get(entry).size())); 
-				}
-				RoomType roomType = getCompatibleRoomType(entry, exit);
-				Coordinate validCoord = getValidCoordinates(entry, nextPosition);
-				Room room = createRoom(validCoord.getX(), validCoord.getY(), roomType, dungeonRooms.peek().getKey().getRoomaccess().get(dungeonRooms.peek().getKey().getRoomaccess().size()-1), entry, exit);
-				dungeonRooms.add(Map.entry(room, exit));
-			}
-		}
-		
-		for (Map.Entry<Room, Directions> entry : dungeonRooms) {
-			generatedDungeon.getRooms().add(entry.getKey());
-		}
-		generatedDungeon.setEntry(originRoom);
-	}
-	
 	private void generateLinearDungeon() {
 		Deque<Map.Entry<Room, Directions>> dungeonRooms = new LinkedList<>();
 		Deque<Map<Directions, Set<Directions>>> roomAllowedDirections = new LinkedList<>();
@@ -144,43 +66,51 @@ public class DungeonGenerator {
 	
 		boolean backtrack = false;
 		Coordinate nextPosition = null;
-		TaskType tasktype = null;
+		ETaskType tasktype = null;
+		Directions entry = null, exit = null;
+		RoomType roomType = null;
+		
+	
 		while(dungeonRooms.size() < numberofrooms + 1) {
-			
-			nextPosition = getNextCoord(dungeonRooms.peek().getKey(), dungeonRooms.peek().getValue());
+			//System.out.println(roomAllowedDirections);
+			//System.out.println(roomAllowedDirections.getLast());
+			nextPosition = gridManager.getNextCoord(dungeonRooms.getLast().getKey(), dungeonRooms.getLast().getValue());
 			if(!backtrack) {
-				tasktype = taskTypes.get(dungeonRooms.size() - 1);
-				roomAllowedDirections.add(getAllowedDirections(nextPosition, oppositeDirections.get(dungeonRooms.peek().getValue()))); 
+				tasktype = eeManager.getOrderedTaskTypes().get(dungeonRooms.size() - 1);
+				roomAllowedDirections.add(gridManager.getAllowedDirections(nextPosition, dungeonRooms.getLast().getValue())); 
 			}
-			if(roomAllowedDirections.peek().isEmpty()) {
-				System.out.println("Avec backtrack");
+			if(roomAllowedDirections.getLast().isEmpty()) {
 				backtrack = true;
-				roomAllowedDirections.pop();
-				Entry<Room, Directions> r = dungeonRooms.pop();
-				removeAllOccupied(r.getKey());
-				for (Directions dir : new ArrayList<>(roomAllowedDirections.peek().keySet())) {
-					roomAllowedDirections.peek().get(dir).remove(r.getValue());
-					if(roomAllowedDirections.peek().get(dir).isEmpty()) {
-						roomAllowedDirections.peek().remove(dir);
+				roomAllowedDirections.removeLast();
+				Entry<Room, Directions> r = dungeonRooms.removeLast();
+				gridManager.removeAllOccupied(r.getKey());
+				for (Directions dir : new ArrayList<>(roomAllowedDirections.getLast().keySet())) {
+					roomAllowedDirections.getLast().get(dir).remove(r.getValue());
+					if(roomAllowedDirections.getLast().get(dir).isEmpty()) {
+						roomAllowedDirections.getLast().remove(dir);
 					}
 				}
 			}else {
 				backtrack = false;
-				
-				Directions entry = chooseEntryDirection(roomAllowedDirections);
-				Directions exit = Directions.NONE;
-				if(dungeonRooms.size() != numberofrooms) {
-					exit = roomAllowedDirections.peek().get(entry).stream().collect(Collectors.toList()).get(random.nextInt(roomAllowedDirections.peek().get(entry).size())); 
+
+				roomType = null;
+				while(roomType == null) {
+					entry = chooseEntryDirection(roomAllowedDirections);
+					if(dungeonRooms.size() != numberofrooms) {
+						exit = roomAllowedDirections.getLast().get(entry).stream().collect(Collectors.toList()).get(random.nextInt(roomAllowedDirections.getLast().get(entry).size())); 
+					}else {
+						exit = Directions.NONE;
+					}
+					roomType = getCompatibleRoomType(tasktype, entry, exit); 
 				}
-				RoomType roomType = getCompatibleRoomType(tasktype, entry, exit); // TODO : Backtrack in case of null room type
-				Coordinate validCoord = getValidCoordinates(entry, nextPosition);
-				Room room = createRoom(validCoord.getX(), validCoord.getY(), roomType, tasktype, dungeonRooms.peek().getKey().getRoomaccess().get(dungeonRooms.peek().getKey().getRoomaccess().size()-1), entry, exit);
+				Coordinate validCoord = gridManager.getValidCoordinates(entry, nextPosition);
+				Room room = createRoom(validCoord.getX(), validCoord.getY(), roomType, tasktype, dungeonRooms.getLast().getKey().getRoomaccess().get(dungeonRooms.getLast().getKey().getRoomaccess().size()-1), entry, exit);
 				dungeonRooms.add(Map.entry(room, exit));
 			}
 		}
 		
-		for (Map.Entry<Room, Directions> entry : dungeonRooms) {
-			generatedDungeon.getRooms().add(entry.getKey());
+		for (Map.Entry<Room, Directions> aEntry : dungeonRooms) {
+			generatedDungeon.getRooms().add(aEntry.getKey());
 		}
 		generatedDungeon.setEntry(originRoom);
 	}
@@ -192,261 +122,35 @@ public class DungeonGenerator {
 	 * @return the chosen entry direction 
 	 */
 	private Directions chooseEntryDirection(Deque<Map<Directions, Set<Directions>>> roomAllowedDirections) {
-		List<Directions> possibleEntries = roomAllowedDirections.peek().keySet().stream().collect(Collectors.toList()); 
-		if(possibleEntries.size() == 3) {
+		List<Directions> possibleEntries = roomAllowedDirections.getLast().keySet().stream().collect(Collectors.toList());
+		// TODO : Heuristique de choix de petite salle ou grande
+				
+		/*if(possibleEntries.size() == 3) {
 			Directions d = possibleEntries.stream().distinct().filter(simpleDirections::contains).collect(Collectors.toList()).get(0);
 			possibleEntries.add(d);
 			possibleEntries.add(d);
-		}
-		
+		}*/		
 		return possibleEntries.get(random.nextInt(possibleEntries.size()));
 	}
-	
-	private void removeAllOccupied(Room room) {
-		for (Coordinate entry :  new ArrayList<>(occupiedCoordinates.keySet())) {
-			if(occupiedCoordinates.get(entry).getX() == room.getX() && occupiedCoordinates.get(entry).getY() == room.getY()) {
-				occupiedCoordinates.remove(entry);
-			}
-		}
-	}
-	
-	/**
-	 * Computes the availability of each coordinates in <GridPositions> based on the starting coordinates (X,Y) <actualPosition>  
-	 * @param actualPosition
-	 * @return An association GridPositions to Boolean (true if occupied, else false)
-	 */
-	private EnumMap<GridPositions, Boolean> computesGridPositionsOccupied(Coordinate actualPosition){
-		EnumMap<GridPositions, Boolean> posOccupied = new EnumMap<>(GridPositions.class);
-		posOccupied.put(GridPositions.YPLUS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX(), actualPosition.getY() + 1)));
-		posOccupied.put(GridPositions.YMOINS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX(), actualPosition.getY() - 1)));
-		posOccupied.put(GridPositions.XMOINS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() - 1, actualPosition.getY())));
-		posOccupied.put(GridPositions.XPLUS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() + 1, actualPosition.getY())));
-		posOccupied.put(GridPositions.XY_MOINS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() - 1, actualPosition.getY() - 1)));
-		posOccupied.put(GridPositions.XY_PLUS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() + 1, actualPosition.getY() + 1)));
-		posOccupied.put(GridPositions.XPLUS1_YMOINS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() + 1, actualPosition.getY() - 1)));
-		posOccupied.put(GridPositions.XMOINS1_YPLUS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() - 1, actualPosition.getY() + 1)));
-		posOccupied.put(GridPositions.YPLUS2, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX(), actualPosition.getY() + 2)));
-		posOccupied.put(GridPositions.YMOINS2, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX(), actualPosition.getY() - 2)));
-		posOccupied.put(GridPositions.XMOINS1_YPLUS2, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() - 1, actualPosition.getY() + 2)));
-		posOccupied.put(GridPositions.XPLUS1_YPLUS2, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() + 1, actualPosition.getY() + 2)));
-		posOccupied.put(GridPositions.XPLUS2, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() + 2, actualPosition.getY())));
-		posOccupied.put(GridPositions.XPLUS2_YMOINS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() + 2, actualPosition.getY() - 1)));
-		posOccupied.put(GridPositions.XPLUS2_YPLUS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() + 2, actualPosition.getY() + 1)));
-		posOccupied.put(GridPositions.XMOINS2, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() - 2, actualPosition.getY())));
-		posOccupied.put(GridPositions.XMOINS2_YPLUS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() - 2, actualPosition.getY() + 1)));
-		posOccupied.put(GridPositions.XMOINS2_YMOINS1, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() - 2, actualPosition.getY() - 1)));
-		posOccupied.put(GridPositions.XMOINS1_YMOINS2, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() - 1, actualPosition.getY() - 2)));
-		posOccupied.put(GridPositions.XPLUS1_YMOINS2, occupiedCoordinates.keySet().contains(new Coordinate(actualPosition.getX() + 1, actualPosition.getY() - 2)));
-		return posOccupied; 
-	}
-	
+		
 	/**
 	 * Selection of a RoomType that at least possess the entry and exit directions/access.
 	 * @param entry
 	 * @param exit
 	 * @return Valid RoomType
 	 */
-	@Deprecated
-	private RoomType getCompatibleRoomType(Directions entry, Directions exit) {
-		List<RoomType> roomtypes = new ArrayList<>(modelAccess.gameDescription.getRoomtypes().getRoomtypes());
-		for (int i = 0; i < roomtypes.size(); i++) {
-			if(!roomtypes.get(i).getDirections().contains(entry)) {
-				roomtypes.remove(i);
-				i--;
-			}else {
-				if(!exit.equals(Directions.NONE) && !roomtypes.get(i).getDirections().contains(exit)) {
-					roomtypes.remove(i);
-					i--;
-				}
-			}
-		}
-		return roomtypes.get(random.nextInt(roomtypes.size())); 
-	}
-	
-	/**
-	 * Selection of a RoomType that at least possess the entry and exit directions/access.
-	 * @param entry
-	 * @param exit
-	 * @return Valid RoomType
-	 */
-	private RoomType getCompatibleRoomType(TaskType taskType, Directions entry, Directions exit) {
-		List<RoomType> roomTypes = DataAccess.getCompatibleRoomType(taskType, modelAccess.gameDescription);
+	private RoomType getCompatibleRoomType(ETaskType taskType, Directions entry, Directions exit) {
+		List<RoomType> roomTypes = new ArrayList<>(modelAccess.gameDescription.getRoomtypes().getRoomtypes());
+		roomTypes = roomTypes.stream().filter(e -> e.getDirections().size() > 1).collect(Collectors.toList());
 		
 		for (RoomType roomType : new ArrayList<>(roomTypes)) {
 			if(!roomType.getDirections().contains(entry) || (!exit.equals(Directions.NONE) && !roomType.getDirections().contains(exit))) {
 				roomTypes.remove(roomType);
 			}
 		}
-		
 		if(roomTypes.isEmpty()) {return null;}
-		return roomTypes.get(random.nextInt(roomTypes.size())); 
-	}
-	
-	/**
-	 * Function changing the coordinates of the room in order for the coordinates of LargeRoom to always be the one on the bottom-left.
-	 * @param entry (The entry direction of the room)
-	 * @param position (The position used to select the room)
-	 * @return Coordinates of the room (position if simple room or special case, else other coordinates)
-	 */
-	private Coordinate getValidCoordinates(Directions entry, Coordinate position) { 
-		if(entry.equals(Directions.EAST_NORTH) || entry.equals(Directions.NORTH_EAST)) { return new Coordinate(position.getX() - 1, position.getY() - 1); }
-		if(entry.equals(Directions.EAST_SOUTH) || entry.equals(Directions.SOUTH_EAST)) { return new Coordinate(position.getX() - 1, position.getY()); }
-		if(entry.equals(Directions.WEST_NORTH) || entry.equals(Directions.NORTH_WEST)) { return new Coordinate(position.getX(), position.getY() - 1); }
-		return position;
-	}
-	
-	/**
-	 * For each possible entry entryDirections (in theory), it verifies if the entry is really an option then select its possible exits
-	 * @param actualCoordinates
-	 * @param entryDirections (i.e., opposition directions of the previous room exit direction; e.g., if previous room exit is SOUTH, then it contains  NORTH, NORTH_EAST, NORTH_WEST)  
-	 * @return An association between each verified entryDirection and their possible exits
-	 */
- 	private EnumMap<Directions, Set<Directions>> getAllowedDirections(Coordinate actualCoordinates, Set<Directions> entryDirections){
-		EnumMap<Directions, Set<Directions>> originDtoPossibleD = new EnumMap<>(Directions.class); // Possible entry to possible exits 
-		EnumMap<GridPositions, Boolean> gridPosOccupations = computesGridPositionsOccupied(actualCoordinates);
 		
-		Set<Directions> directions;
-		for (Directions direction : entryDirections) {
-			if(simpleDirections.contains(direction)) {
-				directions = new HashSet<>(simpleDirections);
-				if(gridPosOccupations.get(GridPositions.YPLUS1)) {directions.remove(Directions.NORTH);}
-				if(gridPosOccupations.get(GridPositions.YMOINS1)) {directions.remove(Directions.SOUTH);}
-				if(gridPosOccupations.get(GridPositions.XMOINS1)) {directions.remove(Directions.WEST);}
-				if(gridPosOccupations.get(GridPositions.XPLUS1)) {directions.remove(Directions.EAST);}
-			} else {
-				if(direction.equals(Directions.SOUTH_EAST) || direction.equals(Directions.EAST_SOUTH)) {
-					directions = allowedDirectionForSouthEast(gridPosOccupations, direction);
-				} else if(direction.equals(Directions.SOUTH_WEST) || direction.equals(Directions.WEST_SOUTH)) {
-					directions = allowedDirectionForSouthWest(gridPosOccupations, direction);
-				} else if(direction.equals(Directions.WEST_NORTH) || direction.equals(Directions.NORTH_WEST) ) {
-					directions = allowedDirectionForNorthWest(gridPosOccupations, direction);
-				} else {
-					directions = allowedDirectionForNorthEast(gridPosOccupations, direction);
-				}
-			}
-			if(!directions.isEmpty()) originDtoPossibleD.put(direction, directions);
-		}
-		return originDtoPossibleD;
-	}
- 	
-	/**
- 	 * Computes the possible exits for LargeRoomType  with SOUTH_EAST or EAST_SOUTH as entry
- 	 * @param gridPosOccupations (Association between Coordinates and their occupation : true is occupied)
- 	 * @return A set of authorized exit directions for LargeRoomType with SOUTH_EAST or EAST_SOUTH as entry
- 	 */
- 	private Set<Directions> allowedDirectionForSouthEast(EnumMap<GridPositions, Boolean> gridPosOccupations, Directions possibleEntry){
- 		Set<Directions> directions = new HashSet<>();
- 		if(!gridPosOccupations.get(GridPositions.YPLUS1) && !gridPosOccupations.get(GridPositions.XMOINS1) && !gridPosOccupations.get(GridPositions.XMOINS1_YPLUS1)) {
- 			directions.addAll(complexDirections);
-			if(gridPosOccupations.get(GridPositions.YMOINS1)) directions.remove(Directions.SOUTH_EAST);
-			if(gridPosOccupations.get(GridPositions.XPLUS1)) directions.remove(Directions.EAST_SOUTH);
-			if(gridPosOccupations.get(GridPositions.XY_PLUS1)) directions.remove(Directions.EAST_NORTH);
-			if(gridPosOccupations.get(GridPositions.XY_MOINS1)) directions.remove(Directions.SOUTH_WEST);
-			if(gridPosOccupations.get(GridPositions.YPLUS2)) directions.remove(Directions.NORTH_EAST);
-			if(gridPosOccupations.get(GridPositions.XMOINS1_YPLUS2)) directions.remove(Directions.NORTH_WEST);
-			if(gridPosOccupations.get(GridPositions.XMOINS2_YPLUS1)) directions.remove(Directions.WEST_NORTH);
-			if(gridPosOccupations.get(GridPositions.XMOINS2)) directions.remove(Directions.WEST_SOUTH);
-			if(possibleEntry.equals(Directions.SOUTH_EAST)) {directions.remove(Directions.SOUTH_WEST);}
-			if(possibleEntry.equals(Directions.EAST_SOUTH)) {directions.remove(Directions.EAST_NORTH);}
-		}
- 		return directions;
- 	}
- 	
- 	/**
- 	 * Computes the possible exits for LargeRoomType  with SOUTH_WEST or WEST_SOUTH as entry
- 	 * @param gridPosOccupations (Association between Coordinates and their occupation : true is occupied)
- 	 * @return A set of authorized exit directions for LargeRoomType with SOUTH_WEST or WEST_SOUTH as entry
- 	 */
- 	private Set<Directions> allowedDirectionForSouthWest(EnumMap<GridPositions, Boolean> gridPosOccupations, Directions possibleEntry){
- 		Set<Directions> directions = new HashSet<>();
- 		if(!gridPosOccupations.get(GridPositions.YPLUS1) && !gridPosOccupations.get(GridPositions.XY_PLUS1) && !gridPosOccupations.get(GridPositions.XPLUS1)) {
- 			directions.addAll(complexDirections);
- 			if(gridPosOccupations.get(GridPositions.XMOINS1)) directions.remove(Directions.WEST_SOUTH);
-			if(gridPosOccupations.get(GridPositions.YMOINS1)) directions.remove(Directions.SOUTH_WEST);
-			if(gridPosOccupations.get(GridPositions.XMOINS1_YPLUS1)) directions.remove(Directions.WEST_NORTH);
-			if(gridPosOccupations.get(GridPositions.XPLUS1_YMOINS1)) directions.remove(Directions.SOUTH_EAST);
-			if(gridPosOccupations.get(GridPositions.XPLUS2)) directions.remove(Directions.EAST_SOUTH);
-			if(gridPosOccupations.get(GridPositions.XPLUS2_YPLUS1)) directions.remove(Directions.EAST_NORTH);
-			if(gridPosOccupations.get(GridPositions.XPLUS1_YPLUS2)) directions.remove(Directions.NORTH_EAST);
-			if(gridPosOccupations.get(GridPositions.YPLUS2)) directions.remove(Directions.NORTH_WEST);
-			if(possibleEntry.equals(Directions.SOUTH_WEST)) {directions.remove(Directions.SOUTH_EAST);}
-			if(possibleEntry.equals(Directions.WEST_SOUTH)) {directions.remove(Directions.WEST_NORTH);}
-		}
- 		return directions;
- 	}
- 	
- 	/**
- 	 * Computes the possible exits for LargeRoomType  with NORTH_WEST or WEST_NORTH as entry
- 	 * @param gridPosOccupations (Association between Coordinates and their occupation : true is occupied)
- 	 * @return A set of authorized exit directions for LargeRoomType with NORTH_WEST or WEST_NORTH as entry
- 	 */
- 	private Set<Directions> allowedDirectionForNorthWest(EnumMap<GridPositions, Boolean> gridPosOccupations, Directions possibleEntry){
- 		Set<Directions> directions = new HashSet<>(); 
- 		if(!gridPosOccupations.get(GridPositions.XPLUS1) && !gridPosOccupations.get(GridPositions.XPLUS1_YMOINS1) && !gridPosOccupations.get(GridPositions.YMOINS1)) {
- 			directions.addAll(complexDirections);
-			if(gridPosOccupations.get(GridPositions.YPLUS1)) directions.remove(Directions.NORTH_WEST);
-			if(gridPosOccupations.get(GridPositions.XY_PLUS1)) directions.remove(Directions.NORTH_EAST);
-			if(gridPosOccupations.get(GridPositions.XMOINS1)) directions.remove(Directions.WEST_NORTH);
-			if(gridPosOccupations.get(GridPositions.XY_MOINS1)) directions.remove(Directions.WEST_SOUTH);
-			if(gridPosOccupations.get(GridPositions.YMOINS2)) directions.remove(Directions.SOUTH_WEST);
-			if(gridPosOccupations.get(GridPositions.XPLUS1_YMOINS2)) directions.remove(Directions.SOUTH_EAST);
-			if(gridPosOccupations.get(GridPositions.XPLUS2_YMOINS1)) directions.remove(Directions.EAST_SOUTH);
-			if(gridPosOccupations.get(GridPositions.XPLUS2)) directions.remove(Directions.EAST_NORTH);
-			if(possibleEntry.equals(Directions.NORTH_WEST)) {directions.remove(Directions.NORTH_EAST);}
-			if(possibleEntry.equals(Directions.WEST_NORTH)) {directions.remove(Directions.WEST_SOUTH);}
-		}
- 		return directions;
- 	}
-
- 	
- 	/**
- 	 * Computes the possible exits for LargeRoomType  with NORTH_EAST or EAST_NORTH as entry
- 	 * @param gridPosOccupations (Association between Coordinates and their occupation : true is occupied)
- 	 * @param possibleEntry 
- 	 * @return A set of authorized exit directions for LargeRoomType with NORTH_EAST or EAST_NORTH as entry
- 	 */
- 	private Set<Directions> allowedDirectionForNorthEast(EnumMap<GridPositions, Boolean> gridPosOccupations, Directions possibleEntry){
- 		Set<Directions> directions = new HashSet<>();
- 		if(!gridPosOccupations.get(GridPositions.XMOINS1) && !gridPosOccupations.get(GridPositions.XY_MOINS1) && !gridPosOccupations.get(GridPositions.YMOINS1)) {
- 			directions.addAll(complexDirections);
-			if(gridPosOccupations.get(GridPositions.YPLUS1)) directions.remove(Directions.NORTH_EAST);
-			if(gridPosOccupations.get(GridPositions.XMOINS1_YPLUS1)) directions.remove(Directions.NORTH_WEST);
-			if(gridPosOccupations.get(GridPositions.XMOINS2)) directions.remove(Directions.WEST_NORTH);
-			if(gridPosOccupations.get(GridPositions.XMOINS2_YMOINS1)) directions.remove(Directions.WEST_SOUTH);
-			if(gridPosOccupations.get(GridPositions.XMOINS1_YMOINS2)) directions.remove(Directions.SOUTH_WEST);
-			if(gridPosOccupations.get(GridPositions.YMOINS2)) directions.remove(Directions.SOUTH_EAST);
-			if(gridPosOccupations.get(GridPositions.XPLUS1_YMOINS1)) directions.remove(Directions.EAST_SOUTH);
-			if(gridPosOccupations.get(GridPositions.XPLUS1)) directions.remove(Directions.EAST_NORTH);
-			if(possibleEntry.equals(Directions.NORTH_EAST)) {directions.remove(Directions.NORTH_WEST);}
-			if(possibleEntry.equals(Directions.EAST_NORTH)) {directions.remove(Directions.EAST_SOUTH);}
-		}
- 		return directions;
- 	}
-	
-	/**
-	 * Computes the position coordinates corresponding to the exit direction <origineD> of the starting room <origineR>
-	 * @param origineR
-	 * @param origineD
-	 * @return Temporary coordinates of the next room 
-	 */
-	private Coordinate getNextCoord(Room origineR, Directions origineD) {
-		Coordinate coord = new Coordinate();
-		switch (origineD) {
-		case SOUTH: coord.setX(origineR.getX()); coord.setY(origineR.getY() - 1); break;
-		case SOUTH_EAST: coord.setX(origineR.getX() + 1); coord.setY(origineR.getY() - 1); break;
-		case SOUTH_WEST: coord.setX(origineR.getX()); coord.setY(origineR.getY() - 1);  break;
-		case NORTH: coord.setX(origineR.getX()); coord.setY(origineR.getY() + 1); break;
-		case NORTH_EAST: coord.setX(origineR.getX() + 1); coord.setY(origineR.getY() + 2); break;
-		case NORTH_WEST: coord.setX(origineR.getX()); coord.setY(origineR.getY() + 2); break;
-		case EAST: coord.setX(origineR.getX() + 1); coord.setY(origineR.getY());break;
-		case EAST_SOUTH: coord.setX(origineR.getX() + 2); coord.setY(origineR.getY()); break;
-		case EAST_NORTH: coord.setX(origineR.getX() + 2); coord.setY(origineR.getY() + 1); break;
-		case WEST: coord.setX(origineR.getX() - 1); coord.setY(origineR.getY()); break;
-		case WEST_NORTH: coord.setX(origineR.getX() - 1); coord.setY(origineR.getY() + 1); break;
-		case WEST_SOUTH: coord.setX(origineR.getX() - 1); coord.setY(origineR.getY()); break;
-		default: break;
-		}
-		return coord;
+		return roomTypes.get(random.nextInt(roomTypes.size())); 
 	}
 	
 	/**
@@ -456,42 +160,9 @@ public class DungeonGenerator {
 	private Room createEntryRoom() {
 		List<RoomType> rts = roomsWithOneDirection();
 		RoomType rt = rts.get(random.nextInt(rts.size()));		
-		return createRoom(0, 0, rt, null, null, rt.getDirections().get(0));
+		return createRoom(0, 0, rt, null, null, null, rt.getDirections().get(0));
 	}
 	
-	/**
-	 * Instanciate a Room with (X,Y) as coordinates, with the RoomType rt, with an entry direction as entryDirection and exit as exitDirection and set the access between previous and new room 
-	 * @param X
-	 * @param Y
-	 * @param roomT
-	 * @param previousRoomExitAccess
-	 * @param entryDirection
-	 * @param exitDirection
-	 * @return a Room
-	 */
-	@Deprecated
-	private Room createRoom(int X, int Y, RoomType roomT, RoomAccess previousRoomExitAccess,  Directions entryDirection, Directions exitDirection) {
-		Room r = new RoomImpl();
-		r.setRoomtype(roomT);
-		r.setX(X);
-		r.setY(Y);
-		
-		RoomAccess ra = new RoomAccessImpl();
-		if(entryDirection != null) {
-			ra.setOtherroomaccess(previousRoomExitAccess);
-			ra.setDirection(entryDirection);
-			previousRoomExitAccess.setOtherroomaccess(ra);
-			r.getRoomaccess().add(ra);
-		}
-		if(!exitDirection.equals(Directions.NONE)) {
-			ra = new RoomAccessImpl();
-			ra.setDirection(exitDirection);
-			r.getRoomaccess().add(ra);
-		}
-		
-		addOccupiedCoordinates(r);
-		return r;
-	}
 
 	/**
 	 * Instanciate a Room with (X,Y) as coordinates, with the RoomType rt, with an entry direction as entryDirection and exit as exitDirection and set the access between previous and new room 
@@ -503,16 +174,18 @@ public class DungeonGenerator {
 	 * @param exitDirection
 	 * @return a Room
 	 */
-	private Room createRoom(int X, int Y, RoomType roomT, TaskType taskType, RoomAccess previousRoomExitAccess,  Directions entryDirection, Directions exitDirection) {
+	private Room createRoom(int X, int Y, RoomType roomT, ETaskType taskType, RoomAccess previousRoomExitAccess,  Directions entryDirection, Directions exitDirection) {
 		Room r = new RoomImpl();
 		r.setRoomtype(roomT);
 		r.setX(X);
 		r.setY(Y);
 		
-		r.setQuestion(new QuestionImpl());
-		r.getQuestion().setPosition(roomT.getPositions().get(random.nextInt(roomT.getPositions().size())));
-		r.getQuestion().setIncompleteFact(taskType.getClass().getSimpleName());
-		
+		if(taskType != null) {
+			r.setQuestion(new QuestionImpl());
+			r.getQuestion().setPosition(roomT.getPositions().get(random.nextInt(roomT.getPositions().size())));
+			r.getQuestion().setIncompleteFact(taskType.getLiteral());
+		}
+				
 		RoomAccess ra = new RoomAccessImpl();
 		if(entryDirection != null) {
 			ra.setOtherroomaccess(previousRoomExitAccess);
@@ -526,7 +199,7 @@ public class DungeonGenerator {
 			r.getRoomaccess().add(ra);
 		}
 		
-		addOccupiedCoordinates(r);
+		gridManager.addOccupiedCoordinates(r);
 		return r;
 	}
 	
@@ -542,23 +215,6 @@ public class DungeonGenerator {
 			}
 		}
 		return rts;
-	}
-	
-	/**
-	 * Add the coordinates of room in the occupiedCoordinates data structures 
-	 * @param room
-	 */
-	private void addOccupiedCoordinates(Room room) {
-		Coordinate c = new Coordinate(room.getX(), room.getY());
-		occupiedCoordinates.put(new Coordinate(c), room); // X,Y
-		if(room.getRoomtype() instanceof LargeRoomType) {
-			c.setX(room.getX() + 1); 
-			occupiedCoordinates.put(new Coordinate(c), room); // X+1,Y
-			c.setY(room.getY() + 1);
-			occupiedCoordinates.put(new Coordinate(c), room); // X+1,Y+1
-			c.setX(room.getX());
-			occupiedCoordinates.put(new Coordinate(c), room); // X,Y+1
-		}
 	}
 	
 	private void printRoom(Room r) {
